k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitops-api-pod
  labels:
    app: gitops-api
spec:
  containers:
    - name: gitops-api
      image: kubernetes-gitops-platform:1.0
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8000
